<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LocationFinder</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_loc_list">LocListActivity</string>
    <string name="schools">Schools</string>
    <string name="clubs">Clubs</string>
    <string name="airport">Airport</string>
    <string name="coffee_shops">Coffee Shops</string>
    <string name="banks">Banks</string>
    <string name="atms">ATMs</string>
    <string name="temples">Temples</string>
    <string name="churches">Churches</string>
    <string name="restaurants">Restaurants</string>
    <string name="shopping_malls">Shopping Malls</string>
    <string name="railway_station">Railway Stations</string>
    <string name="bars">Bars</string>
    <string name="bus_stops">Bus Stops</string>
    <string name="gas_stations">Gas Stations</string>
    <string name="cinema">Cinema</string>
    <string name="hospital">Hospital</string>
</resources>
