<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <android.support.v7.widget.GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        app:alignmentMode="alignBounds"
        app:orientation="vertical"
        app:rowCount="4"
        tools:context="com.example.locationfinder.MainActivity">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="110dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_columnWeight="1">

            <ImageView
                android:id="@+id/club"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="startOperation"
                android:src="@drawable/night_club" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:gravity="center"
                android:text="@string/clubs"
                android:textColor="#FFFFFF" />

        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="110dp"
            android:orientation="vertical"
            app:layout_columnWeight="1">


            <ImageView
                android:id="@+id/atm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="startOperation"
                android:src="@drawable/atm" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/imageView2"
                android:gravity="center"
                android:text="@string/atms"
                android:textColor="#FFFFFF" />
        </LinearLayout>


        <LinearLayout
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:orientation="vertical"
            app:layout_columnWeight="1">

            <ImageView
                android:id="@+id/shoppingMall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="startOperation"
                android:src="@drawable/shopping_mall" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/shopping_malls"
                android:textColor="#FFFFFF" />


        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="110dp"
            android:orientation="vertical"
            app:layout_columnWeight="1">

            <ImageView
                android:id="@+id/gas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="startOperation"
                android:src="@drawable/gas" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/gas_stations"
                android:textColor="#FFFFFF" />

        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="110dp"
            android:orientation="vertical"
            app:layout_columnWeight="1">

            <ImageView
                android:id="@+id/airport"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="startOperation"
                android:src="@drawable/airport" />


            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/airport"
                android:textColor="#FFFFFF" />
        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="110dp"
            android:orientation="vertical"
            app:layout_columnWeight="1">

            <ImageView
                android:id="@+id/hinduTemple"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="startOperation"
                android:src="@drawable/hindu_temple" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/temples"
                android:textColor="#FFFFFF" />

        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:orientation="vertical"
            app:layout_columnWeight="1">


            <ImageView
                android:id="@+id/train"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="startOperation"
                android:src="@drawable/train" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/railway_station"
                android:textColor="#FFFFFF" />

        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="110dp"
            android:orientation="vertical"
            app:layout_columnWeight="1">

            <ImageView
                android:id="@+id/movie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="startOperation"
                android:src="@drawable/movie" />


            <TextView
                android:id="@+id/textView5"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/cinema"
                android:textColor="#FFFFFF" />
        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:orientation="vertical"
            app:layout_columnWeight="1">

            <ImageView
                android:id="@+id/coffee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="startOperation"
                android:src="@drawable/cafe" />


            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/coffee_shops"
                android:textColor="#FFFFFF" />


        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="110dp"
            android:orientation="vertical"
            app:layout_columnWeight="1">

            <ImageView
                android:id="@+id/church"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="startOperation"
                android:src="@drawable/church" />


            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/churches"
                android:textColor="#FFFFFF" />

        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="110dp"
            android:orientation="vertical"
            app:layout_columnWeight="1">

            <ImageView
                android:id="@+id/bar"
                android:contentDescription="@string/bars"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:onClick="startOperation"
                android:src="@drawable/bar" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/bars"
                android:textColor="#FFFFFF" />


        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="110dp"
            android:orientation="vertical"
            app:layout_columnWeight="1">


            <ImageView
                android:id="@+id/hostpital"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="startOperation"
                android:src="@drawable/hospital" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/hospital"
                android:textColor="#FFFFFF" />


        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="110dp"
            android:orientation="vertical"
            app:layout_columnWeight="1">

            <ImageView
                android:id="@+id/bank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="startOperation"
                android:src="@drawable/bank" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/banks"
                android:textColor="#FFFFFF" />


        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="110dp"
            android:orientation="vertical"
            app:layout_columnWeight="1">


            <ImageView
                android:id="@+id/restaurant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="startOperation"
                android:src="@drawable/restaurant" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/restaurants"
                android:textColor="#FFFFFF" />


        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="110dp"
            android:orientation="vertical"
            app:layout_columnWeight="1">


            <ImageView
                android:id="@+id/bus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="startOperation"
                android:src="@drawable/bus" />


            <TextView
                android:id="@+id/textView14"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/bus_stops"
                android:textColor="#FFFFFF" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="110dp"
            android:orientation="vertical"
            app:layout_columnWeight="1"
            android:gravity="center">


            <ImageView
                android:id="@+id/school"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="startOperation"
                android:src="@drawable/school" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/schools"
                android:textColor="#FFFFFF" />

        </LinearLayout>

    </android.support.v7.widget.GridLayout>

</ScrollView>